# dispatcher-watts

./: .coverage 2  .coverage 3  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: results_v1.ipynb
src/dispatcher_watts/: __init__.py  cli.py  paths.py
src/dispatcher_watts/backtest/: engine.py  metrics.py
src/dispatcher_watts/battery/: __init__.py  constraints.py  model.py
src/dispatcher_watts/competition/: __init__.py  engine.py  factory.py  feasibility.py  house_bot.py  leaderboard.py  mcp_server.py  service.py  store.py
src/dispatcher_watts/cooptimization/: __init__.py  solver.py
src/dispatcher_watts/data/: __init__.py  base.py  ercot.py  ercot_direct.py  live_capture.py  schemas.py  sources.py  store.py
src/dispatcher_watts/finance/: __init__.py  economics.py
src/dispatcher_watts/live/: __init__.py  analysis.py  engine.py  runner.py  state.py
src/dispatcher_watts/reporting/: __init__.py  charts.py
src/dispatcher_watts/strategies/: __init__.py  base.py  live.py  perfect_foresight.py  rolling_avg.py  threshold.py
tests/: test_backtest.py  test_battery.py  test_competition_engine.py  test_competition_feasibility.py  test_competition_house_bot.py  test_competition_leaderboard.py  test_competition_mcp_server.py  test_competition_service.py  test_competition_store.py  test_data.py  test_ercot_direct.py  test_live_analysis.py  test_live_capture.py  test_live_engine.py  test_live_runner.py  test_live_state.py  test_live_strategy.py  test_paths.py  test_strategies.py
