[project]
name = "dispatcher-watts"
version = "0.1.0"
description = "Backtest battery dispatch strategies against historical ERCOT wholesale electricity market data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mark S" }]
keywords = ["energy", "battery", "storage", "ercot", "backtest", "electricity-markets"]
dependencies = [
    "polars>=1.0",
    "pyarrow>=16.0",
    "typer>=0.12",
    "httpx>=0.27",
    "plotly>=5.22",
    "kaleido>=0.2",
    "pulp>=2.8",
    "scipy>=1.13",
    "gridstatusio[polars]>=0.15",
    "python-dotenv>=1.0",
]

[project.scripts]
dispatcher-watts = "dispatcher_watts.cli:app"

[project.urls]
Homepage = "https://github.com/ThisNewMark/dispatcher-watts"
Repository = "https://github.com/ThisNewMark/dispatcher-watts"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

# Optional: tools to run the analysis notebook (notebooks/results_v1.ipynb).
# Install with `uv sync --group notebook`, then run `uv run jupyter lab`.
notebook = [
    "jupyterlab>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, N naming, UP pyupgrade,
# B bugbear, SIM simplify.
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Import the package straight from src/ rather than relying on the editable
# install being in a healthy state.
pythonpath = ["src"]
addopts = "--cov=dispatcher_watts --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
files = ["src"]
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

# gridstatusio, pulp, and plotly ship no (complete) type stubs.
[[tool.mypy.overrides]]
module = ["gridstatusio.*", "pulp.*", "plotly.*"]
ignore_missing_imports = true
